fix: CORS preflight blocked - OPTIONS returning 403 without Access-Control-Allow-Origin